# weekly-dinner-menu

./: .env.example  .gitignore  ARCHITECTURE.md  GITHUB_PUBLISHING_COMPLETE.md  GITHUB_SETUP.md  README.md  TESTING.md  TEST_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: daily-reminder.yml  test-full-cycle.yml  weekly-menu.yml
config/: settings.py
src/: __init__.py  daily_reminder.py  main.py  menu_generator.py  notion_client.py  openai_client.py  preprocessor.py  slack_client.py
tests/: test_e2e_daily_reminder.py  test_e2e_weekly_generation.py  test_integration_slack.py  test_menu_generator.py  test_notion_client.py  test_openai_client.py  test_preprocessor.py
